AuthController updatePassword
