# storage/api-docs/api-docs.json
@@ -210,6 +210,215 @@
                 ]
             }
         },
+        "/invoices": {
+            "get": {
+                "tags": [
+                    "Invoices"
+                ],
+                "summary": "Get a list of invoices",
+                "description": "Display a listing of the resource.",
+                "operationId": "aa316025a5952ade7df615ab589f9c6e",
+                "responses": {
+                    "200": {
+                        "description": "Succesful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/InvoiceModel"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/Invoices": {
+            "post": {
+                "tags": [
+                    "Invoices"
+                ],
+                "summary": "Invoice Store",
+                "description": "Create Invoice",
+                "operationId": "addInvoice",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/InvoiceModel"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/InvoiceModel"
+                                }
+                            }
+                        }
+                    },
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/invoices/{invoice_id}": {
+            "get": {
+                "tags": [
+                    "Invoices"
+                ],
+                "summary": "Find a invoice by Id",
+                "description": "Return a single invoice",
+                "operationId": "getInvoiceById",
+                "parameters": [
+                    {
+                        "name": "invoice_id",
+                        "in": "path",
+                        "description": "Id of invoice to return",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/InvoiceModel"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Invoices"
+                ],
+                "summary": "Update existing invoice",
+                "description": "Returns updated invoice data",
+                "operationId": "updateInvoice",
+                "parameters": [
+                    {
+                        "name": "invoice_id",
+                        "in": "path",
+                        "description": "Invoice id",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/InvoiceModel"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/InvoiceModel"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Invoices"
+                ],
+                "summary": "Delete existing invoice",
+                "description": "Deletes a record and returns no content",
+                "operationId": "deleteInvoice",
+                "parameters": [
+                    {
+                        "name": "invoice_id",
+                        "in": "path",
+                        "description": "Invoice id",
+                        "required": true,
+                        "schema": {
+                            "type": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/products": {
             "get": {
                 "tags": [
@@ -448,7 +657,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Users Store",
+                "summary": "User Store",
                 "description": "Create User",
                 "operationId": "addUser",
                 "requestBody": {
@@ -825,6 +1034,40 @@
                     }
                 },
                 "type": "object"
+            },
+            "InvoiceModel": {
+                "title": "Invoice Model",
+                "properties": {
+                    "Id": {
+                        "title": "ID",
+                        "description": "ID",
+                        "format": "uuid"
+                    },
+                    "customer": {
+                        "$ref": "#/components/schemas/UserCard"
+                    },
+                    "status": {
+                        "title": "Invoice status",
+                        "type": "string"
+                    },
+                    "update_at": {
+                        "title": "Invoice last update",
+                        "type": "string",
+                        "format": "date"
+                    },
+                    "products": {
+                        "title": "Invoice products",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/ProductCard"
+                        }
+                    },
+                    "total": {
+                        "title": "Invoice total price",
+                        "type": "string"
+                    }
+                },
+                "type": "Object"
             },
             "ProductCard": {
                 "title": "ProductCard",
